[package]
name = "haxlint"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9" 
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = {version= "1.0", features = ["span-locations"]}